infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  # determines what to look for in pods to know if it should manage it
  selector:
    matchLabels:
      app: posts
  # is the template for how to create the pods for this deployment (if multiple pods, all pods will follow this pod template)
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: jpwaves/posts
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts
  type: ClusterIP
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
